# BeagleBone-LSM303_Magnetometer

./: .gitignore  CMakeLists.txt  example.cpp
Lib/LSM303/: LSM303DLHC.cpp
Lib/LSM303/Magnetometer/: LSM303Magnetometer.cpp  LSM303Magnetometer.h
